--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 70px;
+  padding-top: 100px;
 }
 .navbar {
   background-color: #fff;
@@ -15,6 +15,12 @@ body {
   margin-left: 10px;
 }
 .navbar-form button {
+  margin-left: 10px;
+}
+.top-padding-med {
+  padding-top: 10px;
+}
+.margin-left-med {
   margin-left: 10px;
 }
 footer {
