--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,5 +1,5 @@
 body
-  padding-top 70px
+  padding-top 100px
 
 .navbar
   background-color #fff
@@ -14,6 +14,12 @@ body
     margin-left 10px
   button
     margin-left 10px
+
+.top-padding-med
+  padding-top 10px
+
+.margin-left-med
+  margin-left 10px
 
 footer
   padding-left 15px
